--- a/casaberriel-backend/pom.xml
+++ b/casaberriel-backend/pom.xml
@@ -14,7 +14,10 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		 <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
 	</properties>
+
 
 	<dependencies>
 		<dependency>
