Implementacion java mail sender para correos de contaco// implementando correo de confirmacion de reservas

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ target/
 .classpath
 .project
 .settings/
+/.settings/
+
 
 # Directorio bin temporal para clases compiladas
 bin/
@@ -57,3 +59,4 @@ nbproject/
 /orm.xml
 /persistence.xml
 /pom.properties
+email.properties
