--- a/casaberriel-backend/src/main/resources/application.properties
+++ b/casaberriel-backend/src/main/resources/application.properties
@@ -14,3 +14,19 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
 spring.webflux.view.prefix=classpath:/templates/
 spring.webflux.view.suffix=.html
+
+# Permite CORS para localhost:8333
+spring.web.cors.allowed-origin-patterns=http://localhost:8333
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
+
