--- a/casaberriel-backend/src/main/resources/application.properties
+++ b/casaberriel-backend/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/berrielDB?useSSL=false&serverT
 spring.datasource.username=root
 spring.datasource.password=F0rcinas78!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jackson.time-zone=UTC
+
 
 # Configuración de JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
