--- a/casaberriel-backend/src/main/resources/application.properties
+++ b/casaberriel-backend/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password=F0rcinas78!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jackson.time-zone=UTC
+server.servlet.session.timeout=20m
 
 
 # Configuración de JPA/Hibernate
@@ -30,6 +31,10 @@ spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-
+sonar.sources=src/main/java
+sonar.tests=src/test/java
+sonar.java.binaries=target/classes
+sonar.java.test.binaries=target/test-classes
+sonar.java.libraries=target/dependency/*.jar
 
 
