--- a/casaberriel-backend/Procfile
+++ b/casaberriel-backend/Procfile
@@ -1,1 +1,2 @@
-web: java -jar target/casaberriel-backend-0.0.1-SNAPSHOT.jar
+web: java -jar -Dspring.profiles.active=heroku target/casaberriel-backend-0.0.1-SNAPSHOT.jar
+
