--- a/casaberriel-backend/pom.xml
+++ b/casaberriel-backend/pom.xml
@@ -13,9 +13,8 @@
 	<artifactId>casaberriel-backend</artifactId>
 
 	<properties>
-		<java.version>11</java.version>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
+		<java.version>1.8</java.version>        
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 
