--- a/casaberriel-backend/src/main/resources/application-staging.properties
+++ b/casaberriel-backend/src/main/resources/application-staging.properties
@@ -1,4 +1,4 @@
-# Configuración de la base de datos en Heroku
+# Configuraciï¿½n de la base de datos en Heroku
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
@@ -6,13 +6,14 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jackson.time-zone=UTC
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:staging}
 
-# Configuración de JPA/Hibernate
+# Configuraciï¿½n de JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Configuración de Thymeleaf
+# Configuraciï¿½n de Thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
