--- a/casaberriel-backend/src/main/resources/application.properties
+++ b/casaberriel-backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Configuración de la base de datos
+# Configuraciï¿½n de la base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/berrielDB?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=F0rcinas78!
@@ -7,11 +7,12 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jackson.time-zone=UTC
 server.servlet.session.timeout=20m
 # Perfil activo (por defecto es 'local')
-spring.profiles.active=local
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:default}
 
 
 
-# Configuración de JPA/Hibernate
+
+# Configuraciï¿½n de JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
