--- a/casaberriel-backend/src/main/resources/application.properties
+++ b/casaberriel-backend/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jackson.time-zone=UTC
 server.servlet.session.timeout=20m
 # Perfil activo (por defecto es 'local')
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:default}
+server.port=${PORT:8080}
 
 
 
