--- a/application-heroku.properties
+++ b/application-heroku.properties
@@ -1,4 +1,4 @@
-# Configuración de la base de datos en Heroku
+# Configuraciï¿½n de la base de datos en Heroku
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
@@ -6,13 +6,17 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jackson.time-zone=UTC
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:heroku}
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
+server.port=${PORT:8080}
 
-# Configuración de JPA/Hibernate
+# Configuraciï¿½n de JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Configuración de Thymeleaf
+# Configuraciï¿½n de Thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
