ajustes de maquetación forms recuperar password// fix tipo de dato id reserva

--- a/casaberriel-backend/src/main/resources/application.properties
+++ b/casaberriel-backend/src/main/resources/application.properties
@@ -42,4 +42,5 @@ sonar.java.binaries=target/classes
 sonar.java.test.binaries=target/test-classes
 sonar.java.libraries=target/dependency/*.jar
 
-
+app.url.local=http://localhost:8333
+app.url.heroku=https://casaberriel-f8aba04852a7.herokuapp.com
