--- a/casaberriel-backend/src/main/resources/application.properties
+++ b/casaberriel-backend/src/main/resources/application.properties
@@ -23,6 +23,9 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
 spring.webflux.view.prefix=classpath:/templates/
 spring.webflux.view.suffix=.html
+logging.level.org.thymeleaf=DEBUG
+logging.level.org.thymeleaf.templateresolver=DEBUG
+
 
 # Permite CORS para localhost:8333
 spring.web.cors.allowed-origin-patterns=http://localhost:8333
