--- a/casaberriel-backend/pom.xml
+++ b/casaberriel-backend/pom.xml
@@ -13,7 +13,7 @@
 	<artifactId>casaberriel-backend</artifactId>
 
 	<properties>
-		<java.version>11</java.version>        
+		<java.version>11</java.version>
 	</properties>
 
 
@@ -33,7 +33,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.2.20</version> 
+			<version>42.2.20</version>
 		</dependency>
 
 
@@ -95,6 +95,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+		<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>3.4.0</version>
+    <scope>test</scope>
+</dependency>
 
 
 	</dependencies>
