--- a/casaberriel-backend/src/main/resources/application.properties
+++ b/casaberriel-backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Configuraciï¿½n de la base de datos
+# Configuración de la base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/berrielDB?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=F0rcinas78!
