--- a/casaberriel-backend/src/main/resources/application.properties
+++ b/casaberriel-backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Configuración de la base de datos
-spring.datasource.url=jdbc:mysql://localhost:3306/berrielDB?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=F0rcinas78!
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/berrieldb
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jackson.time-zone=UTC
 server.servlet.session.timeout=20m
@@ -10,13 +10,18 @@ server.servlet.session.timeout=20m
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:default}
 server.port=${PORT:8080}
 
+# Driver de PostgreSQL
+
 
 
 
 # Configuraciï¿½n de JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true  # Formatea las consultas SQL
+
+
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
